k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: office-management
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.4.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: grafana-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-provider-volume
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboards-volume
              mountPath: /var/lib/grafana/dashboards
      volumes:
        - name: grafana-datasources-volume
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-provider-volume
          configMap:
            name: grafana-dashboard-provider
        - name: grafana-dashboards-volume
          configMap:
            name: grafana-dashboards
