k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ecommerce
  labels:
    app: ecommerce-backend
    app.kubernetes.io/part-of: novastore-platform
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: ecommerce-backend
