k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: ecommerce
  labels:
    app: mongodb
    app.kubernetes.io/part-of: novastore-platform
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
  selector:
    app: mongodb
  clusterIP: None # Headless service for StatefulSet
